add example task

--- a/Practice_10--Graph/Упражнение9.md
+++ b/Practice_10--Graph/Упражнение9.md
@@ -2,7 +2,7 @@
 
 ## Graph
 
-##### Какво е граф?
+### Какво е граф?
 * наредена двойка (V,E),където V e множество от върховете, а E e множество от ребра.
 * Видове графи
 	* ориентиран
@@ -13,12 +13,12 @@
 	* претеглен (тегловен)
 	* пълен
 
-##### Начини на представяне
+### Начини на представяне
 * Матрица на съседство
 * Списък на наследниците
 * Списък на ребрата
 
-##### Основни операции
+### Основни операции
 
 * добавяне/премахване на връх
 * добавяне/премахване на ребро
@@ -30,7 +30,14 @@
 
 [more information](https://en.wikipedia.org/wiki/Graph_(abstract_data_type))
 
-##### Обхождане на граф
+### Обхождане на граф
 
-* Търсене в дълбочина
+* Търсене в дълбочинa
 * Търсене в широчина
+
+Пример: Нека разгледаме следния граф:
+
+![](example.png)
+
+* Търсене в ширина :  1 2 3 5 4 6
+* Търсене в дълбочина : 1 2 4 5 6 3
